core-systems/platform_ops-core/ansible/roles/k8s/gateway/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: teslaai-gateway
  namespace: gateway
  labels:
    app.kubernetes.io/name: teslaai-ingress
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: teslaai
    zero-trust: enforced
    version: v20x-industrial
spec:
  selector:
    istio: ingressgateway # обязательно совпадает с меткой у ingressgateway-pod
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: teslaai-tls-cert
        minProtocolVersion: TLSV1_3
        httpsRedirect: true
        cipherSuites:
          - TLS_AES_128_GCM_SHA256
          - TLS_AES_256_GCM_SHA384
          - TLS_CHACHA20_POLY1305_SHA256
      hosts:
        - "api.teslaai.io"
        - "webui.teslaai.io"
        - "agents.teslaai.io"
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "*.teslaai.io"
